src/snapshots/openapi_to_rust__test_helpers__const_enum_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Message {
    pub content: String,
    ///Conversational role of the generated message.
    ///
    ///This will always be `"assistant"`.
    #[serde(default)]
    pub role: MessageRole,
}
/**Conversational role of the generated message.

This will always be `"assistant"`.*/
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum MessageRole {
    #[default]
    #[serde(rename = "assistant")]
    Assistant,
}
impl MessageRole {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Assistant => "assistant",
        }
    }
}
impl ::std::fmt::Display for MessageRole {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for MessageRole {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
